# phishing-url-detection-mlops

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  check_feature_importance.py  debug_extract.py  debug_sensitivity.py  main.py  mlflow.db  push_data.py  pyproject.toml  requirements.txt  setup.py  test.py  test_mongodb.py
.github/workflows/: ci.yml
final_model/: model.pkl  preprocessor.pkl
network_security/cloud/: s3_syncer.py
network_security/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_trainer.py
network_security/constant/training_pipeline/: __init__.py
network_security/entity/: config_entity.py
network_security/exception/: exception.py
network_security/logging/: logger.py
network_security/pipeline/: training_pipeline.py
network_security/utils/main_utils/: utils.py
network_security/utils/ml_utils/: feature_extraction.py
network_security/utils/ml_utils/evaluation/: evaluation.py
network_security/utils/ml_utils/metric/: classification_metric.py
network_security/utils/ml_utils/model/: estimator.py
templates/: index.html
tests/: conftest.py  test_estimator.py  test_feature_extraction.py  test_label_mapping.py
